Basic POST and GET backend implemented